--- a/Milestone 09/Module 47/Practice Authentication/React-Project-SetUp/package.json
+++ b/Milestone 09/Module 47/Practice Authentication/React-Project-SetUp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-project-setup",
+  "name": "practice-authentication",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.0",
+    "firebase": "^12.4.0",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
